# HTTPServerAndLogFileParsing

./: README.md  pyproject.toml  requirements.txt
php/tests/: MyWebServerTest.php
python/src/: traffic_analyser.py
src/: my-web-server.php  requets.py  traffic_analyser.py
src/helpers/: requets.py
src/server/: my-web-server.php
tests/: MyWebServerTest.php  test_traffic_analyser.py
